# celery-task-pipeline

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  worker.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: health.py  jobs.py
app/core/: celery_app.py  config.py  lifespan.py  redis.py
app/db/: session.py  sync_session.py
app/models/: __init__.py  job.py
app/schemas/: job.py
app/services/: job_service.py  job_store.py  task_dispatcher.py
app/tasks/: process_data.py  retry.py  send_webhook.py
scripts/: e2e-smoke.sh
tests/: conftest.py  test_health.py  test_integration.py  test_jobs.py  test_process_data.py  test_send_webhook.py
